# AlgorithmeClassifier

./: README.md  algorithmeclassifier.py  algorithmeclassifier_nolookalikes.py  pyproject.toml  test_basic.py
Benchmark/: Benchmark.md  batch.py  benchmark.py  calibration.py  checker.py  circles.py  compare.py  correlation.py  deceptive.py  extreme_generalization.py  few_shots.py  gemini.py  gemini.txt  geometrie.py  imbalanced.py  invar.py  learning_curve.py  needles.py  noise.py  outliers.py  rare.py  results.txt  scale.py  spiral.py  stability.py  test.py  unit.py  unit.txt
Breast/: breast.py  breast.txt
Digits/: benchmark_digits.py  benchmark_results.txt
Drybean/: drybean.py  drybean_results.txt
Forest/: forest.py  forest_results.txt
Image Seg/: image_seg.py  image_seg_results.txt
Kaggle Starter Pack/: automl.csv  automl.py
Mice/: mice.py  mice_result.txt
Opti/: opti.py  opti_result.txt
Satellite/: satellite.py  satellite_result.txt
Steel Plates/: steel_plates.py  steel_plates_results.txt
Wine/: wine.py  wine_results.txt
